--- a/UI/css/home.css
+++ b/UI/css/home.css
@@ -81,7 +81,7 @@ body {
   margin-top: 20px;
   justify-content: space-between;
 }
-.write-btn {
+.action-btn {
   border: 0;
   border-radius: 4px;
   font: inherit;
@@ -123,7 +123,8 @@ body {
 .article {
   padding: 10px;
   justify-content: space-between;
-  border: 2px solid yellow;
+  border: 2px solid #367dd9;
+  border-radius: 4px;
 }
 .article-content {
   padding: 4px;
@@ -145,13 +146,19 @@ body {
   font-weight: bold;
   line-height: 1.5;
 }
-.edit-article {
+.article-controls {
+  justify-content: flex-end;
+}
+.article-control {
   border-radius: 4px;
   border: 2px solid #fff;
   padding: 4px 10px;
+  margin: 0 4px;
   background: #448c30;
+  flex-direction: column;
+  align-items: center;
 }
-.edit-article:hover {
+.article-control:hover {
   background: #448c3020;
 }
 .figcaption {
@@ -180,6 +187,19 @@ body {
   border-radius: 10px;
   background: #fff;
 }
+.modal-edit,
+.modal-delete {
+  flex-direction: column;
+}
 .modal-textarea {
   font: inherit;
+}
+.btn-delete {
+  color: #fff;
+  background: #f00;
+  padding: 10px 20px;
+}
+.btn-delete:hover {
+  color: #ff0000;
+  background: #ff000040;
 }
