--- a/UI/css/home.css
+++ b/UI/css/home.css
@@ -59,6 +59,11 @@ body {
   color: #fff;
   font-size: 1.4em;
 }
+.btn__highlight {
+  color: #fff;
+  font-size: 1.4em;
+  background: #448c30;
+}
 .home-main {
   position: relative;
   top: 100px;
@@ -151,15 +156,14 @@ body {
 }
 .article-control {
   border-radius: 4px;
-  border: 2px solid #fff;
   padding: 4px 10px;
   margin: 0 4px;
-  background: #448c30;
+  background: #367dd930;
   flex-direction: column;
   align-items: center;
 }
 .article-control:hover {
-  background: #448c3020;
+  background: #367dd960;
 }
 .figcaption {
   color: #fff;
@@ -182,7 +186,7 @@ body {
   align-items: center;
   background: #00000060;
 }
-.modal-content {
+.modal-contents {
   padding: 10px;
   border-radius: 10px;
   background: #fff;
