feature(flag): flag article as innapropriate
- allow employee to flag article or comment as innapropriate
- add a flag icon on every article and comment
- a modal shows a confirmation to flag

[Finishes #168375349]

--- a/UI/css/home.css
+++ b/UI/css/home.css
@@ -215,19 +215,22 @@ body {
 }
 .modal-edit,
 .modal-delete,
-.modal-comment {
+.modal-comment,
+.modal-flag {
   flex-direction: column;
 }
 .text-input {
   padding: 4px;
   font: inherit;
 }
-.btn-delete {
+.btn-delete,
+.btn-flag {
   color: #fff;
   background: #f00;
   padding: 10px 20px;
 }
-.btn-delete:hover {
+.btn-delete:hover,
+.btn-flag:hover {
   color: #ff0000;
   background: #ff000040;
 }
