--- a/UI/css/home.css
+++ b/UI/css/home.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat|Poiret+One&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Montserrat|Poiret+One&display=swap");
 
 /* removing defaults for every element */
 
@@ -12,7 +12,7 @@
 /* font for other elements */
 
 body {
-  font: 20px 'Montserrat', sans-serif;
+  font: 20px "Montserrat", sans-serif;
 }
 
 /* for flex class elements */
@@ -30,7 +30,7 @@ body {
 /* an exception font for title class */
 
 .title {
-  font-family: 'Poiret One', cursive;
+  font-family: "Poiret One", cursive;
 }
 
 /* top header */
@@ -139,11 +139,10 @@ body {
 .share-btns {
   width: 100%;
 }
- /* section for my articles */
+/* section for my articles */
 
 .my-articles-container {
   padding-left: 10px;
-  border-left: 1px solid #448c30;
   width: 75%;
 }
 
@@ -210,19 +209,19 @@ body {
   flex-direction: column;
 }
 .article {
-  padding: 10px;
+  padding: 0 30px;
   justify-content: space-between;
-  border: 2px solid #367dd9;
+  border-bottom: 2px solid #367dd9;
   border-radius: 4px;
   margin: 10px 0;
 }
 .article-content {
-  padding: 4px;
+  padding: 20px 20px;
   border-right: 1px solid #367dd9;
   width: 66%;
 }
 .article-comments {
-  font-size: .8em;
+  font-size: 0.8em;
   width: 30%;
 }
 .author-box {
@@ -231,7 +230,7 @@ body {
   align-items: center;
 }
 .category-tag {
-  font-size: .8em;
+  font-size: 0.8em;
   color: #040950;
   flex-direction: column;
   align-items: center;
@@ -252,6 +251,7 @@ body {
   text-align: center;
 }
 .article-controls {
+  margin: 20px 0 0 0;
   justify-content: flex-end;
 }
 .article-control {
@@ -321,12 +321,14 @@ body {
 }
 
 /* section for flagged articles */
-
+.flagged-articles {
+  justify-content: space-between;
+}
 .flagged-articles-container {
-  width: 50%;
+  width: 48%;
 }
 .flagged-comments-container {
-  width: 50%;
+  width: 48%;
 }
 .flagged {
   width: 100%;
@@ -334,7 +336,6 @@ body {
 }
 .flagged-comment {
   padding: 4px;
-  border: 2px solid #367dd9;
   border-radius: 4px;
 }
 .link-to-comments {
@@ -353,7 +354,7 @@ body {
     align-items: flex-end;
   }
   .explore-container {
-    font-size: .8em;
+    font-size: 0.8em;
   }
 }
 
@@ -391,7 +392,7 @@ body {
 
 @media screen and (max-width: 730px) {
   body {
-    font-size: .8em;
+    font-size: 0.8em;
   }
   .my-articles,
   .other-articles,
@@ -400,7 +401,7 @@ body {
   }
   .header-controls {
     width: 100%;
-    font-size: .7em;
+    font-size: 0.7em;
   }
   .btn__highlight {
     font-size: 1em;
@@ -423,11 +424,17 @@ body {
     display: inline-block;
   }
   .header-top-btns {
-    font-size: .8em;
+    font-size: 0.8em;
     flex-direction: column;
     justify-content: flex-end;
   }
   .btn-signout {
     margin-bottom: 4px;
+  }
+  .article {
+    padding: 10px;
+  }
+  .article-content {
+    padding: 10px 0;
   }
 }
