--- a/UI/css/article.css
+++ b/UI/css/article.css
@@ -37,8 +37,9 @@ body {
 
 .home-header {
   position: fixed;
+  top: 0px;
   width: 100%;
-  height: 100px;
+  height: 80px;
   background: #367dd9;
   flex-direction: column;
   justify-content: space-between;
@@ -50,54 +51,11 @@ body {
   align-items: center;
 }
 
-/* buttons in header */
-
-.btn-signout:link,
-.btn-signout:visited,
-.btn-admin:link,
-.btn-admin:visited {
-  background: #448c3090;
-  color: #fff;
-  text-decoration: none;
-  padding: 5px 10px;
-  border: 0;
-  border-radius: 4px;
-}
-.btn-signout:hover,
-.btn-admin:hover {
-  color: #448c30;
-  background: #fff;
-}
-
-/* top tabs */
-
-.header-controls {
-  height: 40px;
-  justify-content: space-between;
-}
-.btn-top {
-  font: inherit;
-  border: 0;
-  padding: 4px;
-  color: #ffffffb0;
-  background: #82b8d960;
-  width: 50%;
-}
-.btn-top:hover {
-  color: #fff;
-  font-size: 1.4em;
-}
-.btn__highlight {
-  color: #fff;
-  font-size: 1.4em;
-  background: #448c30;
-}
-
 /* the main content */
 
 .home-main {
   position: relative;
-  top: 100px;
+  top: 80px;
   width: 100%;
   background: #82b8d9;
 }
@@ -106,56 +64,12 @@ body {
 
 .footer-home {
   position: relative;
-  top: 100px;
+  top: 80px;
   height: 40px;
   width: 100%;
   background: #367dd9;
   text-align: center;
 }
-
-/* my articles tab */
-
-.my-articles {
-  width: 100%;
-}
-
-/* section for writing article */
-
-.write-container {
-  padding: 10px 5px;
-  width: 25%;
-}
-.explore-container {
-  padding: 10px 5px;
-  width: 15%;
-}
-.compose-article {
-  width: 100%;
-}
-.write-article {
-  flex-direction: column;
-  align-items: flex-end;
-}
-.choose-category {
-  margin-top: 20px;
-}
-.share-btns {
-  width: 100%;
-}
-/* section for my articles */
-
-.my-articles-container {
-  padding-left: 10px;
-  width: 85%;
-}
-
-/* section for latest articles */
-
-.latest-articles-container {
-  width: 75%;
-}
-
-/* styles for buttons */
 
 .action-btns {
   margin-top: 20px;
@@ -174,29 +88,35 @@ body {
   color: #f00;
   text-decoration: none;
 }
-.btn-share,
 .btn-update,
-.btn-comment,
-.btn-search {
+.btn-comment {
   color: #fff;
   background: #448c30;
   padding: 8px 20px;
   margin: 4px;
 }
-.btn-share:hover,
-.btn-update:hover,
-.btn-comment:hover,
-.btn-search:hover {
+.btn-back {
+  text-decoration: none;
+  border-radius: 4px;
+  color: #fff;
+  background: #448c30;
+  padding: 8px 20px;
+  margin: 4px;
+}
+.btn-back:hover {
   color: #448c30;
   background: #fff;
 }
-.btn-delete,
+.btn-update:hover,
+.btn-comment:hover {
+  color: #448c30;
+  background: #fff;
+}
 .btn-flag {
   color: #fff;
   background: #f00;
   padding: 10px 20px;
 }
-.btn-delete:hover,
 .btn-flag:hover {
   color: #ff0000;
   background: #fff;
@@ -212,20 +132,17 @@ body {
   flex-direction: column;
 }
 .article {
+  flex-direction: column;
   padding: 0 30px;
   justify-content: space-between;
-  border-bottom: 2px solid #367dd9;
-  border-radius: 4px;
   margin: 10px 0;
 }
 .article-content {
-  padding: 20px 20px;
-  border-right: 1px solid #367dd9;
-  width: 66%;
+  width: 90%;
 }
 .article-comments {
   font-size: 0.8em;
-  width: 30%;
+  width: 90%;
 }
 .author-box {
   margin-bottom: 20px;
@@ -278,15 +195,8 @@ body {
 .comment {
   margin: 20px 0;
   color: #040950;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: flex-end;
-}
-.read-more {
-  margin-right: 20px;
-  text-decoration: none;
-}
-.read-more:hover {
-  background: #fff;
 }
 
 /* styles for feedback modal */
@@ -306,8 +216,6 @@ body {
   border-radius: 10px;
   background: #fff;
 }
-.modal-edit,
-.modal-delete,
 .modal-comment,
 .modal-flag {
   padding: 10px;
@@ -319,55 +227,7 @@ body {
   font: inherit;
 }
 
-/* exploring and searching for articles */
-
-.explore-container {
-  flex-direction: column;
-}
-.search-article,
-.category-container {
-  flex-direction: column;
-  align-items: flex-end;
-  margin-bottom: 20px;
-}
-
-/* section for flagged articles */
-.flagged-articles {
-  justify-content: space-between;
-}
-.flagged-articles-container {
-  width: 48%;
-}
-.flagged-comments-container {
-  width: 48%;
-}
-.flagged {
-  width: 100%;
-  border: 0;
-}
-.flagged-comment {
-  padding: 4px;
-  border-radius: 4px;
-}
-.link-to-comments {
-  text-decoration: none;
-  color: #040950;
-  display: none;
-  padding: 5px 10px;
-  align-self: flex-end;
-}
-
 /* responsive for tablets */
-
-@media screen and (max-width: 1120px) {
-  .choose-category {
-    flex-direction: column;
-    align-items: flex-end;
-  }
-  .explore-container {
-    font-size: 0.8em;
-  }
-}
 
 @media screen and (max-width: 900px) {
   .article {
@@ -381,21 +241,10 @@ body {
   .article-comments {
     width: 100%;
   }
-  .write-container,
-  .explore-container {
-    width: 30%;
-  }
-  .my-articles-container,
-  .latest-articles-container {
-    width: 70%;
-  }
   .modal-contents {
     width: 100%;
     padding: 0;
     border-radius: 0;
-  }
-  .my-articles-container {
-    margin: 0;
   }
 }
 
@@ -404,43 +253,6 @@ body {
 @media screen and (max-width: 730px) {
   body {
     font-size: 0.8em;
-  }
-  .my-articles,
-  .other-articles,
-  .flagged-articles {
-    flex-direction: column;
-  }
-  .header-controls {
-    width: 100%;
-    font-size: 0.7em;
-  }
-  .btn__highlight {
-    font-size: 1em;
-  }
-  .btn-top:hover {
-    font-size: 1em;
-  }
-  .write-container {
-    padding: 20px;
-  }
-  .write-container,
-  .my-articles-container,
-  .explore-container,
-  .latest-articles-container,
-  .flagged-articles-container,
-  .flagged-comments-container {
-    width: 100%;
-  }
-  .link-to-comments {
-    display: inline-block;
-  }
-  .header-top-btns {
-    font-size: 0.8em;
-    flex-direction: column;
-    justify-content: flex-end;
-  }
-  .btn-signout {
-    margin-bottom: 4px;
   }
   .article {
     padding: 10px;
