--- a/UI/css/home.css
+++ b/UI/css/home.css
@@ -129,9 +129,6 @@ body {
   padding: 10px 5px;
   width: 15%;
 }
-.compose-article {
-  width: 100%;
-}
 .write-article {
   flex-direction: column;
   align-items: flex-end;
@@ -323,6 +320,10 @@ body {
   border: none;
   border-right: 1px solid #000000;
   border-bottom: 1px solid #000000;
+}
+.compose-article {
+  background: #fff;
+  width: 100%;
 }
 
 /* exploring and searching for articles */
